Ensure collapsed mergepane border
After switching to grid based layout, each pane had its own border.
With 0px gap, the border still did not collapse to single 1px border,
so instead we switch to using gap + background-color.

C.f. https://stackoverflow.com/questions/47882924/preventing-double-borders-in-css-grid

--- a/packages/nbdime/src/styles/common.css
+++ b/packages/nbdime/src/styles/common.css
@@ -25,6 +25,9 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(18px, auto);
+  gap: var(--jp-border-width);
+  background-color: var(--jp-cell-editor-border-color);
+  border: var(--codemirror-border);
 }
 
 .nbdime-root .cm-merge-left-editor {
@@ -88,8 +91,6 @@
   vertical-align: top;
   width: 100%;
   background-color: var(--jp-cell-editor-background);
-  border: var(--codemirror-border);
-  border-radius: 0px;
 }
 
 .nbdime-root .cm-merge-pane-rightmost {
